fixed scroll z-index behaviors

--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,8 @@
 
 .allItemsContainer{
   grid-area: 2 / 1 / 3 / 2;
-  position: relative;
+  position: absolute;
   top: 75px;
-  z-index: -1;
 }
 
 .itemContainer{
@@ -17,17 +16,20 @@
   margin: 10px;
   background-color: rgb(107, 107, 107);
   color: rgb(245, 245, 245);
+  padding: 10px;
 }
 
 .navBar{
   position: fixed;
+  transform: translateX(-50%);
+  grid-area: 1 / 1 / 2 / 2;
   top: 0px;
   left: 50vw;
-  transform: translateX(-50%);
   background-color: #707070;
   width: 100vw;
   height: 75px;
   border-bottom: 2px solid black;
+  z-index: 1;
 }
 
 .navText{
